# FounderAI-Multi-Agent-Startup-Simulator

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
backend/: .env  alembic.ini  pyproject.toml  test.py  test_ceo.py  test_cto.py  test_embedder.py  test_llm.py  test_pm.py  test_workflow.py
backend/alembic/: env.py
backend/alembic/versions/: 136cbea8f4fb_add_project_agent_outputs.py  14ae8bb59965_create_projects_table.py  15b500ee7cf4_add_project_progress_fields.py  e945b79877cb_add_history_column.py
backend/app/: main.py
backend/app/agents/: base.py  ceo.py  contracts.py  cto.py  designer.py  investor.py  marketing.py  pm.py  schemas.py
backend/app/core/: config.py  logging.py
backend/app/db/: base.py  session.py
backend/app/llm/: client.py  exceptions.py  models.py  schemas.py
backend/app/memory/: events.py  history.py  history_formatter.py  models.py
backend/app/orchestrator/: models.py  orchestrator.py
backend/app/prompts/: ceo.md  ceo_rag.md  ceo_revision.md  cto.md  cto_rag.md  cto_revision.md  designer.md  designer_rag.md  investor.md  investor_rag.md  marketing.md  marketing_rag.md  pm.md  pm_rag.md
backend/app/rag/: chunker.py  client.py  context_builder.py  embedder.py  ingest.py  pdf_loader.py  retriever.py
backend/app/repositories/: project_repository.py
backend/app/schemas/: project.py  startup.py
backend/app/services/: ai_services.py  project_service.py
backend/app/tasks/: startup_task.py
backend/app/utils/: prompt_loader.py
backend/app/workflows/: state.py  (+1 more)
backend/frontend/: package-lock.json
(+32 files in other folders)
